[package]
name = "yao-gc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
chacha20 = "0.9.0"
curve25519-dalek = { version = "3.2.1", features = ["serde"] }
peg = "0.8.0"
rand = "0.7.0"
subtle = "2.4.1"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4.1"
structopt = "0.3.26"
